# Riemann-zeta-function-exploration

./: .gitignore  README.md
compute/: README.md  download_zeros.sh  precompute_zeros.py  prime_spectroscopy.py  rh_fixedP.py  rh_gpu.py  rh_postfix.py  rh_progress.py  rh_theory.py  rh_windows.py  rhgap.py
lean/: README.md  lake-manifest.json  lakefile.lean
lean/RHCrystal/: NymanBeurling.lean  NymanBeurlingL2.lean  NymanBeurlingMain.lean  RHCrystal.lean
nyman-beurling/: LITERATURE.md  OUTREACH.md  README.md  RESULTS.md  amplitude.py  amplitude_theory.md  amplitude_verify.py  bigN_analysis.py  bigN_trial.py  chains.py  chains_theory.md  compute_dN.py  kernel_cd.py  kfloor.md  lemmaA_brief.md  lemmaA_refutation_check.txt  mellin_check.py  mellin_lower_bound.md  nb_gram.py  nb_gram_np.py  offset_check.py  oscillations.py  overnight_10k.py  plan5_sr.py  residual.py  spectroscopy.py  symbol_zero.py  symbol_zero_output.txt  tvl_check.py  vasyunin_check.py
papers/: criticality_note.md  progress_notes_2026-06-09.md  rh_crystal_v3_final.md  rh_crystal_v4.md  rh_process_paper.md  scaling_theory.md
plans/: 01-lambda-min-lower-bound.md  02-zero-amplitude-estimate.md  03-residual-profile-and-vasyunin.md  04-lean-theorem1-end-to-end.md  05-mellin-lower-bound.md  06-lower-bound-proof.md  07-spectroscopy-insights.md  08-redheffer.md  README.md
rust/: BUGFIX.md  Cargo.toml
rust/src/: main.rs  main.rs.old  main.rs.v2.old
