[package]
name = "rh-crystal"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
nalgebra = { version = "0.33", features = ["rayon"] }
csv = "1.3"
primal = "0.3"
num-complex = "0.4"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
target-cpu = "native"
